# MCBooster

./: .gitignore  .zenodo.json  CMakeLists.txt  INSTALL  INSTALL.md  README.md  THANKS.md  _calculate_8h.html  _calculate_8h__dep__incl.md5  _calculate_8h__incl.map  _calculate_8h_source.html  _config_8h.html  _config_8h__dep__incl.map  _config_8h__dep__incl.md5  _config_8h_source.html  _decay_mother_8h.html  _decay_mother_8h__dep__incl.map  _decay_mother_8h__dep__incl.md5  _decay_mother_8h__incl.md5  _decay_mother_8h_source.html  _decay_mothers_8h.html  _decay_mothers_8h__dep__incl.md5  _decay_mothers_8h__incl.md5  _decay_mothers_8h_source.html  _evaluate_8h.html  _evaluate_8h.js  _evaluate_8h__incl.md5  _evaluate_8h_source.html  _evaluate_array_8h.html  _evaluate_array_8h.js  _evaluate_array_8h__incl.md5  _evaluate_array_8h_source.html  _flag_accept_reject_8h.html  _flag_accept_reject_8h__incl.md5  _flag_accept_reject_8h_source.html  _g_containers_8h.html  _g_containers_8h.js  _g_containers_8h__dep__incl.map  _g_containers_8h__dep__incl.md5  _g_containers_8h__incl.map  (+195 more)
cmake/: FindTCLAP.cmake
d0/d0c/: struct_m_c_booster_1_1_calculate2__coll__graph.map
d0/d47/: structstrided__range_1_1stride__functor.html
d0/d50/: _m_c_booster_8h.html  _m_c_booster_8h.js  _m_c_booster_8h_source.html
d0/d7b/: _g_containers_8h__incl.map  _g_containers_8h__incl.md5
d0/d86/: _rand_gen_8h.html  _rand_gen_8h_source.html
d0/d9b/: struct_m_c_booster_1_1_calculate3.html  struct_m_c_booster_1_1_calculate3.js
d0/de6/: _decay_mother_8h__incl.map  _decay_mother_8h__incl.md5
d1/d57/: _config_8h__dep__incl.map  _config_8h__dep__incl.md5
d1/d6c/: classstrided__range-members.html
d1/d77/: strided__iterator_8h.html  strided__iterator_8h_source.html
d1/d81/: _decay_mothers_8h__incl.map  _decay_mothers_8h__incl.md5
d1/da0/: struct_m_c_booster_1_1_flag_accept_reject.html  struct_m_c_booster_1_1_flag_accept_reject.js  struct_m_c_booster_1_1_flag_accept_reject_a3714203276a648e0eded4753d4d16f19_icgraph.map  struct_m_c_booster_1_1_flag_accept_reject_a3714203276a648e0eded4753d4d16f19_icgraph.md5  struct_m_c_booster_1_1_flag_accept_reject_aa50ed6a7bd44e353273980e5f91ca52e_cgraph.map  struct_m_c_booster_1_1_flag_accept_reject_aa50ed6a7bd44e353273980e5f91ca52e_cgraph.md5
d1/dd6/: struct_m_c_booster_1_1_decay_mother__coll__graph.md5
d1/dda/: _vector4_r_8h__dep__incl.map  _vector4_r_8h__dep__incl.md5
d1/de7/: _g_functional_8h.html  _g_functional_8h_source.html
d2/d21/: struct_m_c_booster_1_1_calculate3-members.html
d2/d52/: struct_m_c_booster_1_1_events.html  struct_m_c_booster_1_1_events.js
d2/d5a/: struct_m_c_booster_1_1_i_function.html  struct_m_c_booster_1_1_i_function.js
d2/db7/: _g_containers_8h.html  _g_containers_8h.js  _g_containers_8h_source.html
d3/d09/: class_m_c_booster_1_1_phase_space.html  class_m_c_booster_1_1_phase_space.js  class_m_c_booster_1_1_phase_space_a1a9d49d3bd681d8dea0327f2eafd339b_cgraph.md5  class_m_c_booster_1_1_phase_space_ab32ff8457a7393aa3d73cdcf8ad9b06c_cgraph.map
d3/d17/: class_m_c_booster_1_1_vector3_r-members.html
d3/d22/: struct_m_c_booster_1_1_i_function-members.html
d3/d2e/: struct_m_c_booster_1_1_calculate.html  struct_m_c_booster_1_1_calculate.js
d3/d6d/: _evaluate_8h.html  _evaluate_8h.js  _evaluate_8h_source.html
d3/db2/: struct_m_c_booster_1_1_calculate2.html  struct_m_c_booster_1_1_calculate2.js
d3/dfe/: classstrided__range.html  classstrided__range_a2cccc63ba96ea6b1c4320301458614d4_cgraph.map  classstrided__range_a2cccc63ba96ea6b1c4320301458614d4_cgraph.md5  classstrided__range_a8a46c1fcafd94e4fe3e348ae6a93f146_icgraph.md5
d4/d41/: _vector3_r_8h.html  _vector3_r_8h.js  _vector3_r_8h_source.html
d4/d71/: _config_8h.html  _config_8h.js  _config_8h_source.html
d4/d95/: struct_m_c_booster_1_1_decay_mothers.html  struct_m_c_booster_1_1_decay_mothers.js  struct_m_c_booster_1_1_decay_mothers_afcd4e118b5ebd8731fe19143d792b4c2_cgraph.map  struct_m_c_booster_1_1_decay_mothers_afcd4e118b5ebd8731fe19143d792b4c2_cgraph.md5
d4/d98/: _vector3_r_8h__dep__incl.map  _vector3_r_8h__dep__incl.md5
doc/: Doxyfile
html/: _calculate_8h.html  _calculate_8h__dep__incl.map  _calculate_8h__incl.md5  _calculate_8h_source.html  _config_8h.html  _config_8h.js  _config_8h__dep__incl.map  _config_8h__incl.md5  _config_8h_source.html  _decay_mother_8h.html  _decay_mother_8h__incl.map  _decay_mother_8h__incl.md5  _decay_mother_8h_source.html  _decay_mothers_8h.html  _decay_mothers_8h__dep__incl.map  _decay_mothers_8h__incl.map  _decay_mothers_8h_source.html  _evaluate_8h.html  _evaluate_8h__incl.map  _evaluate_8h_source.html  _evaluate_array_8h.html  _evaluate_array_8h__incl.map  _evaluate_array_8h_source.html  _flag_accept_reject_8h.html  _flag_accept_reject_8h__dep__incl.map  _flag_accept_reject_8h__dep__incl.md5  _flag_accept_reject_8h__incl.map  _flag_accept_reject_8h_source.html  _g_containers_8h.html  _g_containers_8h__incl.md5  _g_containers_8h_source.html  _g_functional_8h.html  _g_functional_8h__incl.md5  _g_functional_8h_source.html  _g_types_8h.html  _g_types_8h_source.html  _generate_8h.html  _generate_8h.js  _generate_8h__incl.map  _generate_8h__incl.md5  (+140 more)
mcbooster/: GTypes.h  Generate.h  MCBooster.h  strided_iterator.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+40 more)
src/: CompareWithTGenPhaseSpace.cu  Generate.cpp  Generate.cu  GenerateSample.cu  PerformanceTest.cu
(+173 files in other folders)
